# Snake-Multiplayer-C11

./: CMakeLists.txt  README.md  main.c  sdl_leak_test.c
client/: client.c  client.h  client_main.c  client_network.c  client_network.h  game.c  game.h  game_render.c  game_render.h
client/gui/: game_render.c  game_render.h
common/: game_protocol.c  game_protocol.h  protocol.h
docs/: Semestralka_Pouzivatelska_prirucka_Kudla_Molitoris.docx
game/: fruit.c  fruit.h  game.c  game.h  snake.c  snake.h
gui/: game_render.c  game_render.h
include/: client.h  client_handler.h  client_network.h  game.h  game_render.h  server.h  server_network.h
server/: client_handler.c  client_handler.h  game_controller.c  game_controller.h  server.c  server.h  server_main.c  server_network.c  server_network.h
server/game/: fruit.c  fruit.h  game.c  game.h  snake.c  snake.h
util/: queue.c  queue.h  vector.c  vector.h
